dark mode fix

--- a/src/_app.scss
+++ b/src/_app.scss
@@ -1,4 +1,12 @@
 .container {
   width: 100%;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
+  main {
+    width: 100%;
+    min-height: calc(100vh - 17rem);
+  }
 }
