--- a/src/components/Footer/_footer.scss
+++ b/src/components/Footer/_footer.scss
@@ -7,10 +7,7 @@ footer {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
+
 
   p {
     font-size: 1.6rem;
